# RCFC

./: CMakeLists.txt  README
include/: ConshdlrArcflow.h  ConshdlrCPC.h  ConshdlrDayVar.h  ConshdlrKPC.h  ConshdlrNVehicle.h  ConshdlrSRC.h  ConshdlrVehicle.h  branchingrule_arcflow.h  branchingrule_dayvar.h  branchingrule_vehicle.h  eventhdlr_nodeInit.hpp  heurDayVarRounding.h  initial.h  label2.h  labeling_algorithm_vrp.h  labellist.h  local_search_pricing.h  model_data.h  pricer_vrp.h  printer.h  probdata_vrp.h  prop_tourvarfixing.h  prop_varfixing.h  tools_vrp.h  tourVRP.h  tsptw.h  var_tools.h  vardata.h
instances/compare/: r1_n40_p0.2_0.json  r1_n40_p0.2_1.json  r1_n40_p0.2_2.json  r1_n40_p0.2_3.json  r1_n40_p0.2_4.json  r1_n40_p0.2_5.json  r1_n40_p0.2_6.json  r1_n40_p0.2_7.json  r1_n40_p0.2_8.json  r1_n40_p0.2_9.json  r1_n40_p0.4_0.json  r1_n40_p0.4_1.json  r1_n40_p0.4_2.json  r1_n40_p0.4_3.json  r1_n40_p0.4_4.json  r1_n40_p0.4_5.json  r1_n40_p0.4_6.json  r1_n40_p0.4_7.json  r1_n40_p0.4_8.json  r1_n40_p0.4_9.json  r1_n40_p0.6_0.json  r1_n40_p0.6_1.json  r1_n40_p0.6_2.json  r1_n40_p0.6_3.json  r1_n40_p0.6_4.json  r1_n40_p0.6_5.json  r1_n40_p0.6_6.json  r1_n40_p0.6_7.json  r1_n40_p0.6_8.json  r1_n40_p0.6_9.json  r1_n40_p0.8_0.json  r1_n40_p0.8_1.json  r1_n40_p0.8_2.json  r1_n40_p0.8_3.json  r1_n40_p0.8_4.json  r1_n40_p0.8_5.json  r1_n40_p0.8_6.json  r1_n40_p0.8_7.json  r1_n40_p0.8_8.json  r1_n40_p0.8_9.json  (+201 more)
instances/compare_sol/: r1_n40_p0.2_0.sol  r1_n40_p0.2_1.sol  r1_n40_p0.2_2.sol  r1_n40_p0.2_3.sol  r1_n40_p0.2_4.sol  r1_n40_p0.2_6.sol  r1_n40_p0.4_0.sol  r1_n40_p0.4_1.sol  r1_n40_p0.4_2.sol  r1_n40_p0.4_3.sol  r1_n40_p0.4_4.sol  r1_n40_p0.4_8.sol  r1_n40_p0.6_0.sol  r1_n40_p0.6_1.sol  r1_n40_p0.6_2.sol  r1_n40_p0.6_3.sol  r1_n40_p0.6_4.sol  r1_n40_p0.8_0.sol  r1_n40_p0.8_1.sol  (+101 more)
src/: ConshdlrArcflow.cpp  ConshdlrCPC.cpp  ConshdlrDayVar.cpp  ConshdlrKPC.cpp  ConshdlrNVehicle.cpp  ConshdlrSRC.cpp  ConshdlrVehicle.cpp  branchingrule_arcflow.cpp  branchingrule_dayvar.cpp  branchingrule_vehicle.cpp  eventhdlr_nodeInit.cpp  heurDayVarRounding.cpp  initial.cpp  label2.cpp  labeling_algorithm_vrp.cpp  labellist.cpp  local_search_pricing.cpp  main_vrp.cpp  model_data.cpp  pricer_vrp.cpp  printer.cpp  probdata_vrp.cpp  prop_tourvarfixing.cpp  prop_varfixing.cpp  tools_vrp.cpp  tourVRP.cpp  tsptw.cpp  var_tools.cpp  vardata.cpp
(+1586 files in other folders)
